<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.pdm.ifsudestemg.activities.MainActivity"
    android:orientation="vertical">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_reiniciar"
        android:layout_centerHorizontal="true"
        android:id="@+id/button_reiniciar"
        android:layout_margin="10dp"
        android:onClick="restartApp"
        android:background="@drawable/button_background"
        android:textColor="@color/inverter_color" />

    <Button
        android:layout_width="@dimen/dimension_button"
        android:layout_height="@dimen/dimension_button"
        android:id="@+id/button_one"
        android:layout_below="@+id/button_reiniciar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_margin="10dp"
        android:text="@string/button_one"
        android:textSize="20dp"
        android:background="@drawable/screen_border_one"
        android:onClick="checkChoise"/>

    <Button
        android:layout_width="@dimen/dimension_button"
        android:layout_height="@dimen/dimension_button"
        android:id="@+id/button_three"
        android:layout_below="@+id/button_one"
        android:layout_margin="10dp"
        android:text="@string/button_three"
        android:textSize="20dp"
        android:background="@drawable/screen_border_three"
        android:onClick="checkChoise"/>

    <Button
        android:layout_width="@dimen/dimension_button"
        android:layout_height="@dimen/dimension_button"
        android:id="@+id/button_five"
        android:layout_below="@+id/button_three"
        android:layout_margin="10dp"
        android:text="@string/button_five"
        android:textSize="20dp"
        android:background="@drawable/screen_border_five"
        android:onClick="checkChoise"/>

    <Button
        android:layout_width="@dimen/dimension_button"
        android:layout_height="@dimen/dimension_button"
        android:id="@+id/button_two"
        android:layout_below="@+id/button_reiniciar"
        android:layout_alignParentRight="true"
        android:layout_margin="10dp"
        android:text="@string/button_two"
        android:textSize="20dp"
        android:background="@drawable/screen_border_two"
        android:onClick="checkChoise"/>

    <Button
        android:layout_width="@dimen/dimension_button"
        android:layout_height="@dimen/dimension_button"
        android:id="@+id/button_four"
        android:layout_below="@+id/button_two"
        android:layout_alignParentRight="true"
        android:layout_margin="10dp"
        android:text="@string/button_four"
        android:textSize="20dp"
        android:background="@drawable/screen_border_four"
        android:onClick="checkChoise"/>

    <Button
        android:layout_width="@dimen/dimension_button"
        android:layout_height="@dimen/dimension_button"
        android:id="@+id/button_six"
        android:layout_below="@+id/button_four"
        android:layout_alignParentRight="true"
        android:layout_margin="10dp"
        android:text="@string/button_six"
        android:textSize="20dp"
        android:background="@drawable/screen_border_six"
        android:onClick="checkChoise"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/progress"
        android:id="@+id/progress_text"
        android:layout_below="@+id/button_five"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:textSize="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/congratulations"
        android:text="@string/congratulations"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:textSize="60dp"
        android:textStyle="bold"
        android:visibility="invisible"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/final_mensage"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/congratulations"
        android:text="@string/final_mensage"
        android:textSize="40dp"
        android:layout_marginTop="50dp"
        android:textAlignment="center"
        android:textStyle="italic"
        android:visibility="invisible"/>

    <ProgressBar
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:id="@+id/progress_bar"
        android:layout_below="@+id/button_six"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
        />
</RelativeLayout>
