<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.pdm.ifsudestemg.activities.TelaInicialActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/initial_message"
        android:textSize="@dimen/font_header"
        android:textStyle="bold"
        android:textAlignment="center"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_new_game"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:text="@string/label_new_game"
        android:textSize="@dimen/font_button"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_records"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:text="@string/label_view_records"
        android:textSize="@dimen/font_button"/>
</LinearLayout>
